feat: add css projects

--- a/index.html
+++ b/index.html
@@ -12,16 +12,27 @@
     <h1>Nina Smrekar</h1>
     <p>I'm a Web Developer</p>
     <hr />
-    <h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
-    <img src="./assets/images/movie-ranking.PNG" alt="my movie ranking" />
+    <h2><a href="./public/projects/pricing-table/">Flexbox Pricing Table</a></h2>
+    <img src="./assets/images/project-screenshots/pricing-table.PNG" alt="pricing table" />
     <hr />
-    <h2><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
-    <img src="./assets/images/birthday-invite.PNG" alt="my birthday invite" />
+    <h2><a href="./public/projects/motivational-poster/index.html">Motivational Poster Project</a></h2>
+    <img src="./assets/images/project-screenshots/motivational-poster.PNG" alt="motivational poster" />
+    <hr />
+    <h2><a href="./public/projects/design-agency/index.html">Web Design Agency</a></h2>
+    <img src="./assets/images/project-screenshots/design-agency.PNG" alt="web design agency" />
+    <hr />
+    <h2><a href="./public/projects/birthday-invitation/index.html">Birthday Invite Project</a></h2>
+    <img src="./assets/images/project-screenshots/birthday-invitation.PNG" alt="birthday invitation" />
+    <hr />
+    <h2><a href="./public/projects/movie-ranking/index.html">Movie Ranking Project</a></h2>
+    <img src="./assets/images/project-screenshots/movie-ranking.PNG" alt="movie ranking" />
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
     <hr />
-    <footer>Copyright © 2024 Nina Smrekar. All Rights Reserved.</footer>
+    <footer>
+        <p>Copyright &#169; 2024, Nina Smrekar . All Rights Reserved.</p>
+    </footer>
 </body>
 
 </html>
