--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
                     </div>
                 </div>
                 <div class="card col-12 col-md-5 col-lg-4 col-xl-3 m-3">
+                    <h3 class="card-title">Dice Game</h3>
+                    <div class="card-body">
+                        <img src="./assets/images/project-screenshots/dice-game.PNG" class="card-img-top"
+                            alt="pricing table">
+                        <a href="./public/projects/dice-game/index.html" class="btn my-3">See Project</a>
+                    </div>
+                </div>
+                <div class="card col-12 col-md-5 col-lg-4 col-xl-3 m-3">
+                    <h3 class="card-title">Drum Kit</h3>
+                    <div class="card-body">
+                        <img src="./assets/images/project-screenshots/drum-kit.PNG" class="card-img-top"
+                            alt="pricing table">
+                        <a href="./public/projects/drum-kit/index.html" class="btn my-3">See Project</a>
+                    </div>
+                </div>
+                <div class="card col-12 col-md-5 col-lg-4 col-xl-3 m-3">
                     <h3 class="card-title">Flexbox Pricing Table</h3>
                     <div class="card-body">
                         <img src="./assets/images/project-screenshots/pricing-table.PNG" class="card-img-top"
