--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
 
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                <div class="col-10 col-sm-8 col-lg-6">
+                <div class="col-10 col-sm-8 col-lg-6 image">
                     <img src="./assets/images/profile-photo.jpg" class="header-photo d-block mx-lg-auto img-fluid"
                         alt="code" loading="lazy">
                 </div>
@@ -129,6 +129,12 @@
                 </div>
 
                 <ul class="list-unstyled d-flex">
+                    <li class="ms-3"><a href="mailto: smrekar.nina5@gmail.com">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill='#F4F4F2' class="bi"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
+                            </svg></a></li>
                     <li class="ms-3"><a href="https://github.com/ninasmrekar">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill='#F4F4F2' class="bi"
                                 viewBox="0 0 16 16">
