--- a/public/about.html
+++ b/public/about.html
@@ -7,7 +7,6 @@
   <title>About Me</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -16,6 +15,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=GFS+Didot&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -44,56 +44,172 @@
 
   <main class="justify-content-center">
     <div class="container">
-      <h2>Summary</h2>
-      <p>My name is Nina Smrekar and I currently live in Switzerland.
-        I am a student at OST University of Applied Sciences of Eastern Switzerland pursuing my bachelor's degree in IT
-        with experience in web development, android development and testing.
-        I am a hardworking person, who likes to be creative and is constantly trying to learn something new.
-      </p>
+      <section>
+        <h2>Summary</h2>
+        <p>My name is Nina Smrekar and I live in Switzerland. I am a student at OST University of Applied Sciences of
+          Eastern Switzerland pursuing my bachelor's degree in IT
+          with experience in Web Development and Android Development. I am a hardworking person, who likes to be
+          creative
+          and is constantly trying to learn something new.
+        </p>
+      </section>
 
       <hr />
 
-      <h2>Education</h2>
-      <ul>
-        <li>2018-2022 - Gewerblich-industrielles Bildungszentrum Zug</li>
-        <li>2022-present - OST University of Applied Sciences of Eastern Switzerland</li>
-      </ul>
+      <section>
+        <h2>Education</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Duration</th>
+              <th scope="col">School</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>2018 - 2022</td>
+              <td>Gewerblich-industrielles Bildungszentrum Zug</td>
+            </tr>
+            <tr>
+              <td>2022 - present</td>
+              <td>OST University of Applied Sciences of Eastern Switzerland</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <hr />
+      <section>
+        <h2>Work Experience</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Duration</th>
+              <th scope="col">Job Title</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>2018 - 2022</td>
+              <td>Apprenticeship at Siemens as Application Developer</td>
+            </tr>
+            <tr>
+              <td>August 2022 - March 2023</td>
+              <td>Student Developer at Siemens</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
 
       <hr />
 
-      <h2>Work Experience</h2>
-      <ul>
-        <li>2018-2022 - Apprenticeship at Siemens as Application Developer</li>
-        <li>2022/2023 - Student Developer at Siemens</li>
-      </ul>
+      <section>
+        <div class="text-center rounded-3">
+          <h2>Skills</h2>
+          <div class="d-inline-flex gap-2 mb-5">
+            <img class="skill-icon" src="../assets/images/skills/html.svg" alt="html icon" height="100">
+            <img class="skill-icon" src="../assets/images/skills/css.svg" alt="css icon" height="100">
+            <img class="skill-icon" src="../assets/images/skills/bootstrap.svg" alt="bootstrap icon" height="100">
+            <img class="skill-icon" src="../assets/images/skills/javascript.svg" alt="javascript icon" height="100">
+            <img class="skill-icon" src="../assets/images/skills/react.svg" alt="react icon" height="100">
+            <img class="skill-icon" src="../assets/images/skills/typescript.svg" alt="typescript icon" height="100">
+            <img class="skill-icon" src="../assets/images/skills/python.svg" alt="python icon" height="100">
+            <img class="skill-icon" src="../assets/images/skills/java.svg" alt="java icon" height="100">
+            <img class="skill-icon" src="../assets/images/skills/git.svg" alt="git icon" height="100">
+          </div>
+        </div>
+      </section>
 
       <hr />
 
-      <h2>Skills</h2>
-      <ul>
-        <li>Java</li>
-        <li>C#</li>
-        <li>HTML, CSS, Bootstrap</li>
-        <li>Angular</li>
-        <li>JavaScript</li>
-        <li>Typescript</li>
-        <li>Microsoft Office</li>
-        <li>Android Studio</li>
-      </ul>
-
-      <hr />
-
-      <h2>Hobbies</h2>
-      <ul>
-        <li>Reading</li>
-        <li>Baking</li>
-        <li>Arts and Crafts</li>
-        <li>Walks with my dog</li>
-        <li>Travelling</li>
-      </ul>
-
+      <section>
+        <div class="container" id="hanging-icons">
+          <h2 class="pb-2">Hobbies</h2>
+          <div class="row g-4 row-cols-1 row-cols-lg-3">
+            <div class="hobby col d-flex align-items-start ml-5">
+              <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-book"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783" />
+                </svg>
+              </div>
+              <div>
+                <p class="fs-2 text-body-emphasis">Reading</p>
+              </div>
+            </div>
+            <div class="hobby col d-flex align-items-start ml-5">
+              <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-code"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8z" />
+                </svg>
+              </div>
+              <div>
+                <p class="fs-2 text-body-emphasis">Programming</p>
+              </div>
+            </div>
+            <div class="hobby col d-flex align-items-start ml-5">
+              <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cake2"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="m3.494.013-.595.79A.747.747 0 0 0 3 1.814v2.683q-.224.051-.432.107c-.702.187-1.305.418-1.745.696C.408 5.56 0 5.954 0 6.5v7c0 .546.408.94.823 1.201.44.278 1.043.51 1.745.696C3.978 15.773 5.898 16 8 16s4.022-.227 5.432-.603c.701-.187 1.305-.418 1.745-.696.415-.261.823-.655.823-1.201v-7c0-.546-.408-.94-.823-1.201-.44-.278-1.043-.51-1.745-.696A12 12 0 0 0 13 4.496v-2.69a.747.747 0 0 0 .092-1.004l-.598-.79-.595.792A.747.747 0 0 0 12 1.813V4.3a22 22 0 0 0-2-.23V1.806a.747.747 0 0 0 .092-1.004l-.598-.79-.595.792A.747.747 0 0 0 9 1.813v2.204a29 29 0 0 0-2 0V1.806A.747.747 0 0 0 7.092.802l-.598-.79-.595.792A.747.747 0 0 0 6 1.813V4.07c-.71.05-1.383.129-2 .23V1.806A.747.747 0 0 0 4.092.802zm-.668 5.556L3 5.524v.967q.468.111 1 .201V5.315a21 21 0 0 1 2-.242v1.855q.488.036 1 .054V5.018a28 28 0 0 1 2 0v1.964q.512-.018 1-.054V5.073c.72.054 1.393.137 2 .242v1.377q.532-.09 1-.201v-.967l.175.045c.655.175 1.15.374 1.469.575.344.217.356.35.356.356s-.012.139-.356.356c-.319.2-.814.4-1.47.575C11.87 7.78 10.041 8 8 8c-2.04 0-3.87-.221-5.174-.569-.656-.175-1.151-.374-1.47-.575C1.012 6.639 1 6.506 1 6.5s.012-.139.356-.356c.319-.2.814-.4 1.47-.575M15 7.806v1.027l-.68.907a.94.94 0 0 1-1.17.276 1.94 1.94 0 0 0-2.236.363l-.348.348a1 1 0 0 1-1.307.092l-.06-.044a2 2 0 0 0-2.399 0l-.06.044a1 1 0 0 1-1.306-.092l-.35-.35a1.935 1.935 0 0 0-2.233-.362.935.935 0 0 1-1.168-.277L1 8.82V7.806c.42.232.956.428 1.568.591C3.978 8.773 5.898 9 8 9s4.022-.227 5.432-.603c.612-.163 1.149-.36 1.568-.591m0 2.679V13.5c0 .006-.012.139-.356.355-.319.202-.814.401-1.47.576C11.87 14.78 10.041 15 8 15c-2.04 0-3.87-.221-5.174-.569-.656-.175-1.151-.374-1.47-.575-.344-.217-.356-.35-.356-.356v-3.02a1.935 1.935 0 0 0 2.298.43.935.935 0 0 1 1.08.175l.348.349a2 2 0 0 0 2.615.185l.059-.044a1 1 0 0 1 1.2 0l.06.044a2 2 0 0 0 2.613-.185l.348-.348a.94.94 0 0 1 1.082-.175c.781.39 1.718.208 2.297-.426" />
+                </svg>
+              </div>
+              <div>
+                <p class="fs-2 text-body-emphasis">Baking</p>
+              </div>
+            </div>
+            <div class="hobby col d-flex align-items-start ml-5">
+              <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                  class="bi bi-person-walking" viewBox="0 0 16 16">
+                  <path
+                    d="M9.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0M6.44 3.752A.75.75 0 0 1 7 3.5h1.445c.742 0 1.32.643 1.243 1.38l-.43 4.083a1.8 1.8 0 0 1-.088.395l-.318.906.213.242a.8.8 0 0 1 .114.175l2 4.25a.75.75 0 1 1-1.357.638l-1.956-4.154-1.68-1.921A.75.75 0 0 1 6 8.96l.138-2.613-.435.489-.464 2.786a.75.75 0 1 1-1.48-.246l.5-3a.75.75 0 0 1 .18-.375l2-2.25Z" />
+                  <path
+                    d="M6.25 11.745v-1.418l1.204 1.375.261.524a.8.8 0 0 1-.12.231l-2.5 3.25a.75.75 0 1 1-1.19-.914zm4.22-4.215-.494-.494.205-1.843.006-.067 1.124 1.124h1.44a.75.75 0 0 1 0 1.5H11a.75.75 0 0 1-.531-.22Z" />
+                </svg>
+              </div>
+              <div>
+                <p class="fs-2 text-body-emphasis">Walking my Dog</p>
+              </div>
+            </div>
+            <div class="hobby col d-flex align-items-start ml-5">
+              <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                  class="bi bi-airplane" viewBox="0 0 16 16">
+                  <path
+                    d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849m.894.448C7.111 2.02 7 2.569 7 3v4a.5.5 0 0 1-.276.447l-5.448 2.724a.5.5 0 0 0-.276.447v.792l5.418-.903a.5.5 0 0 1 .575.41l.5 3a.5.5 0 0 1-.14.437L6.708 15h2.586l-.647-.646a.5.5 0 0 1-.14-.436l.5-3a.5.5 0 0 1 .576-.411L15 11.41v-.792a.5.5 0 0 0-.276-.447L9.276 7.447A.5.5 0 0 1 9 7V3c0-.432-.11-.979-.322-1.401C8.458 1.159 8.213 1 8 1s-.458.158-.678.599" />
+                </svg>
+              </div>
+              <div>
+                <p class="fs-2 text-body-emphasis">Travelling</p>
+              </div>
+            </div>
+            <div class="hobby col d-flex align-items-start ml-5">
+              <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                  class="bi bi-scissors" viewBox="0 0 16 16">
+                  <path
+                    d="M3.5 3.5c-.614-.884-.074-1.962.858-2.5L8 7.226 11.642 1c.932.538 1.472 1.616.858 2.5L8.81 8.61l1.556 2.661a2.5 2.5 0 1 1-.794.637L8 9.73l-1.572 2.177a2.5 2.5 0 1 1-.794-.637L7.19 8.61zm2.5 10a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0m7 0a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0" />
+                </svg>
+              </div>
+              <div>
+                <p class="fs-2 text-body-emphasis">Arts and Crafts</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
-
   </main>
 
 
@@ -105,6 +221,12 @@
         </div>
 
         <ul class="list-unstyled d-flex">
+          <li class="ms-3"><a href="mailto: smrekar.nina5@gmail.com">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill='#F4F4F2' class="bi"
+                viewBox="0 0 16 16">
+                <path
+                  d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
+              </svg></a></li>
           <li class="ms-3"><a href="https://github.com/ninasmrekar">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill='#F4F4F2' class="bi"
                 viewBox="0 0 16 16">
