--- a/public/about.html
+++ b/public/about.html
@@ -106,16 +106,23 @@
       <section>
         <div class="text-center rounded-3">
           <h2>Skills</h2>
-          <div class="d-inline-flex gap-2 mb-5">
-            <img class="skill-icon" src="../assets/images/skills/html.svg" alt="html icon" height="100">
-            <img class="skill-icon" src="../assets/images/skills/css.svg" alt="css icon" height="100">
-            <img class="skill-icon" src="../assets/images/skills/bootstrap.svg" alt="bootstrap icon" height="100">
-            <img class="skill-icon" src="../assets/images/skills/javascript.svg" alt="javascript icon" height="100">
-            <img class="skill-icon" src="../assets/images/skills/react.svg" alt="react icon" height="100">
-            <img class="skill-icon" src="../assets/images/skills/typescript.svg" alt="typescript icon" height="100">
-            <img class="skill-icon" src="../assets/images/skills/python.svg" alt="python icon" height="100">
-            <img class="skill-icon" src="../assets/images/skills/java.svg" alt="java icon" height="100">
-            <img class="skill-icon" src="../assets/images/skills/git.svg" alt="git icon" height="100">
+          <div class="row d-inline-flex gap-2 mb-5">
+            <img class="col-12 col-lg-2 skill-icon" src="../assets/images/skills/html.svg" alt="html icon" height="100">
+            <img class="col-12 col-lg-2 skill-icon" src="../assets/images/skills/css.svg" alt="css icon" height="100">
+            <img class="col-12 col-lg-2 skill-icon" src="../assets/images/skills/bootstrap.svg" alt="bootstrap icon"
+              height="100">
+            <img class="col-12 col-lg-2 skill-icon" src="../assets/images/skills/javascript.svg" alt="javascript icon"
+              height="100">
+            <img class="col-12 col-lg-2 skill-icon" src="../assets/images/skills/react.svg" alt="react icon"
+              height="100">
+            <img class="col-12 col-lg-2 skill-icon" src="../assets/images/skills/typescript.svg" alt="typescript icon"
+              height="100">
+            <img class="col-12 col-lg-2 skill-icon" src="../assets/images/skills/python.svg" alt="python icon"
+              height="100">
+            <img class="col-12 col-lg-2 skill-icon" src="../assets/images/skills/java.svg" alt="java icon" height="100">
+            <img class="col-12 col-lg-2 skill-icon" src="../assets/images/skills/csharp.svg" alt="git icon"
+              height="100">
+            <img class="col-12 col-lg-2 skill-icon" src="../assets/images/skills/git.svg" alt="git icon" height="100">
           </div>
         </div>
       </section>
@@ -136,7 +143,7 @@
                 </svg>
               </div>
               <div>
-                <p class="fs-2 text-body-emphasis">Reading</p>
+                <p class="fs-3 text-body-emphasis">Reading</p>
               </div>
             </div>
             <div class="hobby col d-flex align-items-start ml-5">
@@ -149,7 +156,7 @@
                 </svg>
               </div>
               <div>
-                <p class="fs-2 text-body-emphasis">Programming</p>
+                <p class="fs-3 text-body-emphasis">Programming</p>
               </div>
             </div>
             <div class="hobby col d-flex align-items-start ml-5">
@@ -162,7 +169,7 @@
                 </svg>
               </div>
               <div>
-                <p class="fs-2 text-body-emphasis">Baking</p>
+                <p class="fs-3 text-body-emphasis">Baking</p>
               </div>
             </div>
             <div class="hobby col d-flex align-items-start ml-5">
@@ -177,7 +184,7 @@
                 </svg>
               </div>
               <div>
-                <p class="fs-2 text-body-emphasis">Walking my Dog</p>
+                <p class="fs-3 text-body-emphasis">Walking my Dog</p>
               </div>
             </div>
             <div class="hobby col d-flex align-items-start ml-5">
@@ -190,7 +197,7 @@
                 </svg>
               </div>
               <div>
-                <p class="fs-2 text-body-emphasis">Travelling</p>
+                <p class="fs-3 text-body-emphasis">Travelling</p>
               </div>
             </div>
             <div class="hobby col d-flex align-items-start ml-5">
@@ -203,7 +210,7 @@
                 </svg>
               </div>
               <div>
-                <p class="fs-2 text-body-emphasis">Arts and Crafts</p>
+                <p class="fs-3 text-body-emphasis">Arts and Crafts</p>
               </div>
             </div>
           </div>
