fix: positioning of elements

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
     <main>
         <div class="container">
-            <div class="row justify-content-center">
-                <h2 class="col-12 mb-4">My Projects</h2>
+            <div class="project-section row justify-content-center">
+                <h2 class="projects-title col-12">My Projects</h2>
                 <div class="card col-12 col-md-5 col-lg-4 col-xl-3 m-3">
                     <h3 class="card-title">Motivational Poster</h3>
                     <img src="./assets/images/project-screenshots/motivational-poster.PNG" class="card-img-top"
