add simon game project

--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
                     </div>
                 </div>
                 <div class="card col-12 col-md-5 col-lg-4 col-xl-3 m-3">
+                    <h3 class="card-title">Simon Game</h3>
+                    <div class="card-body">
+                        <img src="./assets/images/project-screenshots/simon-game.PNG" class="card-img-top"
+                            alt="simon game">
+                        <a href="./public/projects/simon-game/index.html" class="btn my-3">See Project</a>
+                    </div>
+                </div>
+                <div class="card col-12 col-md-5 col-lg-4 col-xl-3 m-3">
                     <h3 class="card-title">Flexbox Pricing Table</h3>
                     <div class="card-body">
                         <img src="./assets/images/project-screenshots/pricing-table.PNG" class="card-img-top"
