add finished version 2 without responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nina Smrekar | Web Developer</title>
+  <link rel="icon" href="./logo.PNG" type="image/x-icon" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
     rel="stylesheet">
@@ -12,6 +13,8 @@
 
 <body>
   <div id="root"></div>
+  <script src="index.js" type="text/JS"></script>
+  <script src=" https://smtpjs.com/v3/smtp.js"></script>
 </body>
 
 </html>
