--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nina Smrekar | Web Developer</title>
   <link rel="icon" href="./logo.PNG" type="image/x-icon" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./src/style.scss">
 </head>
 
 <body>
   <div id="root"></div>
   <script src="index.js" type="text/JS"></script>
-  <script src=" https://smtpjs.com/v3/smtp.js"></script>
 </body>
 
 </html>
